<resources>
    <string name="app_name">Lottery</string>
    <string name="lottery">大乐透</string>
    <string name="super_lottery">超级大乐透</string>
    <string name="tab_label_home">首页</string>
    <string name="tab_label_lottery">开奖</string>
    <string name="tab_label_expert">专家</string>
    <string name="tab_label_community">社区</string>
    <string name="tab_label_my">我的</string>
    <string name="default_wealth_num">--</string>
    <string name="my_wealth_colored_diamonds">彩钻</string>
    <string name="my_wealth_colorful_bean">彩豆商城</string>
    <string name="my_wealth_incentive_money">奖励金</string>
    <string name="my_wealth_coupon">优惠券</string>
    <string name="recharge">充值</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_card_activity_center">活动中心</string>
    <string name="my_card_wechat">公众号</string>
    <string name="my_card_share">分享App</string>
    <string name="my_card_task">福利任务</string>
    <string name="my_card_news">我的资讯</string>
    <string name="my_card_buy">已购记录</string>
    <string name="my_card_smiulate_record">模拟记录</string>
    <string name="my_card_help">帮助反馈</string>
    <string name="my_card_game_center">游戏中心</string>
    <string name="my_card_bounce">刮奖金</string>
    <string name="function_card_label_bounce">刮奖金</string>
    <string name="function_card_label_recommend">大师推荐</string>
    <string name="function_card_label_game_center">游戏中心</string>
    <string name="function_card_label_trend">走势图</string>
    <string name="function_card_label_scan">拍票查奖</string>
    <string name="function_card_label_choose">选号分布</string>
    <string name="function_card_label_analyze">均线分析</string>
    <string name="function_card_label_pick">遗漏宝</string>
    <string name="function_card_label_rainbow">彩虹号</string>
    <string name="function_card_label_simulate">模拟选号</string>
    <string name="lottery_grid_item_history">历史开奖</string>
    <string name="lottery_grid_item_trend">走势图</string>
    <string name="lottery_grid_item_recommend">专家推荐</string>
    <string name="lottery_grid_item_simulate">模拟选号</string>
    <string name="lottery_grid_item_calculate">奖金计算器</string>
    <string name="lottery_grid_item_vip_member">VIP会员</string>
    <string name="lottery_grid_item_date">数据统计</string>
    <string name="lottery_grid_item_analyze">趋势分析</string>
    <string name="lottery_grid_item_live_hotspot">实时热点</string>
    <string name="lottery_grid_item_average_analysis">均线分析</string>
    <string name="lottery_grid_item_selection_distribution">选号分布</string>
    <string name="lottery_grid_item_missing_treasure">遗漏宝</string>
    <string name="my_user_name_default_no_login">登录/注册</string>
    <string name="view_all_recommendations">查看全部推荐></string>
    <string name="my_information_great">我的赞</string>
    <string name="my_information_collection">我的收藏</string>
    <string name="my_information_comment">我的评论</string>
    <string name="my_information_no_data_hint">抱歉，暂无数据</string>
    <string name="you_don_t_follow_any_user">你还没有关注用户哦</string>
    <string name="no_fans_data_hint">啊哦~本页暂无相关内容哦~</string>
    <string name="my_bought_tab_label1">大师精选</string>
    <string name="my_bought_tab_label2">智能推荐</string>
    <string name="my_bought_tab_label3">资讯</string>
    <string name="play_back">回放</string>
    <string name="more">更多</string>
    <string name="remind">提醒</string>
    <string name="notify">通知</string>
    <string name="message">消息</string>
    <string name="settings">设置</string>
    <string name="person_home">个人主页</string>
    <string name="featured">每日精选</string>
    <string name="topic">专题</string>
    <string name="sign_in_now">立即签到</string>
    <string name="hot_news">热门资讯</string>
    <string name="hot">热门</string>
    <string name="countdown">倒计时</string>
    <string name="dot">·</string>
    <string name="colon">:</string>
    <string name="activity_center_title_1">彩虹号招募</string>
    <string name="activity_center_title_2">度小满-百度有钱花</string>
    <string name="welfare_task_sing">签到领彩豆</string>
    <string name="welfare_task_sing_days">已连续签到0天</string>
    <string name="log_out">退出登录</string>
    <string name="settings_safe">账户与安全</string>
    <string name="settings_pay">支付设置</string>
    <string name="settings_check_upgrade">检查更新</string>
    <string name="settings_about">关于我们</string>
    <string name="settings_user_agreement">用户协议</string>
    <string name="settings_charge_agreement">彩钻充值协议</string>
    <string name="settings_privacy">隐私规范</string>
    <string name="settings_socity">社区规范</string>
    <string name="settings_socity_agreement">社区协议</string>
    <string name="settings_third_share_list">第三方个人信息共享清单</string>
    <string name="account_lottery">彩虹账号</string>
    <string name="account_socity">社交账号</string>
    <string name="phone_number">手机号</string>
    <string name="wechat">微信</string>
    <string name="binding">已绑定</string>
    <string name="unbinding">未绑定</string>
    <string name="account_cancellation">注销账号</string>
    <string name="go_cancellation">去注销</string>
    <string name="pay_password">支付密码</string>
    <string name="bank_card">银行卡</string>
    <string name="real_name_information">实名信息</string>
    <string name="to_fill_in">去填写</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="add_bank_card">添加提款银行卡</string>
    <string name="account_open_phone_number">手机号码</string>
    <string name="account_open_name">姓名</string>
    <string name="id_number">身份证号</string>
    <string name="confirm">确认</string>
    <string name="dynamic">动态</string>
    <string name="interaction">互动</string>
    <string name="select_number">选号</string>
    <string name="follow">关注</string>
    <string name="sorry_no_data">抱歉，暂无数据</string>
    <string name="fans">粉丝</string>
    <string name="explain">说明</string>
    <string name="start_simulation">开始\n模拟</string>
    <string name="follow_or_fans">关注/粉丝</string>
    <string name="save_change">保存修改</string>
    <string name="hint_input_real_name">请输入真实姓名</string>
    <string name="hint_input_phone_number">请输入手机号码</string>
    <string name="hint_input_id_number">请输入身份证号</string>
    <string name="password_set">设置密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_set_hint">请输入6位数字密码</string>
    <string name="password_confirm_hit">再次输入支付密码</string>
    <string name="version">Lottery V10010</string>
    <string name="bug_record">购买记录</string>
    <string name="bug_record_title">已购记录</string>
    <string name="bug_record_detail">所有付费记录</string>
    <string name="simulate_record">模拟记录</string>
    <string name="simulate_tools">选号模拟工具</string>
    <string name="help_center_title">帮助中心</string>
    <string name="my_feedback_title">我的反馈</string>
    <string name="feed_back">意见反馈</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="custom_services">客服</string>
    <string name="question_classify">问题分类</string>
    <string name="question_description">问题描述</string>
    <string name="question_description_hit">尊敬的用户您好：\n请在下方输入您关于产品的反馈内容</string>
    <string name="question_choose_hit">请选择问题分类</string>
    <string name="question_screen_capture">问题截图</string>
    <string name="choose_picture_text">添加图片</string>
    <string name="message_clear_text">清除消息</string>
    <string name="message_settings_title">消息设置</string>
    <string name="message_settings_tips">哪些人@我会收到消息提醒</string>
    <string name="message_settings_all_message">所有人</string>
    <string name="message_settings_subscribe_message">我关注的人</string>
    <string name="message_title_comment">评论</string>
    <string name="message_title_thumb">点赞</string>
    <string name="message_title_dot">\@我</string>
    <string name="message_title_fans">粉丝</string>
    <string name="message_titlearg_comment">所有评论</string>
    <string name="message_titlearg_thumbs">所有赞</string>
    <string name="message_titlearg_dot">所有内容</string>
    <string name="message_titlearg_fans">新增粉丝</string>
    <string name="bind_bank_card">银行卡绑定</string>
    <string name="bind_bank_card_text">立刻绑定</string>
    <string name="bank_card_account_name">开户姓名</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank_card_number_input_hint">请输入该开户名下的银行卡号</string>
    <string name="bug_record_master">大师精选</string>
    <string name="bug_record_recommend">智能推荐</string>
    <string name="recommend">推荐</string>
    <string name="lucky_ticket">幸运实票</string>
    <string name="bug_record_news">资讯</string>
    <string name="simulate_record_normal_choose">普通选号</string>
    <string name="simulate_record_append_choose">追号计划</string>
    <string name="filter">筛选</string>
    <string name="filter_by_type">彩种筛选</string>
    <string name="filter_by_period">期次筛选</string>
    <string name="filter_by_state">状态筛选</string>
    <string name="append_by_type">彩种</string>
    <string name="append_by_profit">盈亏</string>
    <string name="append_by_state">状态</string>
    <string name="system_notification">系统通知</string>
    <string name="violation_notification">违规通知</string>
    <string name="other_notification">其它通知</string>
    <string name="system_notification_more">点击查看详情></string>
    <string name="current_account">当前账号</string>
    <string name="current_balance">当前余额</string>
    <string name="colorful_drill">彩钻</string>
    <string name="pay_now">立即支付</string>
    <string name="charge_agree_text">我已同意，并阅读《彩钻充值协议》</string>
    <string name="should_pay_money_count">需支付：</string>
    <string name="should_pay_money_tips">·首单立减10元</string>
    <string name="charge_banner_tips_1">·充值优惠随机立减最高</string>
    <string name="charge_banner_tips_2">·用户首充额外再建最高</string>
    <string name="yuan">元</string>
    <string name="coupon_can_be_used">可使用</string>
    <string name="coupon_to_be_effective">待生效</string>
    <string name="coupon_used">已使用</string>
    <string name="show_expired_coupon">查看已过期优惠券></string>
    <string name="expired_coupon">过期优惠券</string>
    <string name="detailed">明细</string>
    <string name="my_complaint">我的投诉</string>
    <string name="choose_all">全选</string>
    <string name="delete">删除</string>
    <string name="operation">操作</string>
    <string name="complete">完成</string>
    <string name="redemption_records">兑换记录</string>
    <string name="exchange">兑换</string>
    <string name="colorful_bean_detail">彩豆明细</string>
    <string name="colorful_bean_explain">个人彩豆说明</string>
    <string name="current_colorful_bean">当前彩豆</string>
    <string name="join_now">立即加入></string>
    <string name="remain_of_money">余额:</string>
    <string name="broadcast_text">签到是彩豆的唯一来源路径，加入SVIP可快速提升经验获得更多彩豆！></string>
    <string name="charge_tips_text">【注意事项】\n\n1、彩虹多多为非购彩平台。\n2、充值的彩钻仅可用于购买大师精析付费内容。\n3、充值金额一经确定不可退还，不可提现。\n4、解释权归彩虹多多所有。</string>
    <string name="charge_tips_text_highlight">彩虹多多为非购彩平台。</string>
    <string name="reward_details">奖励金明细</string>
    <string name="withdrawal">提现</string>
    <string name="edit_personal_information">编辑个人信息</string>
    <string name="blacklist">黑名单</string>
    <string name="choose_to_update_head_icon_text">点击上传头像</string>
    <string name="update_head_remain_times_tips">(本月还可以上传1次)</string>
    <string name="nickname">昵称</string>
    <string name="edit_nickname">更改昵称</string>
    <string name="personal_decorate_center">个人装扮中心</string>
    <string name="avatar_pendant">头像挂件</string>
    <string name="dynamic_background_card">动态背景卡</string>
    <string name="save">保存</string>
    <string name="nick_edit_remain_times">本月还可修改1次</string>
    <string name="use_random_nickname">使用随机昵称</string>
    <string name="no_pendant">无挂件</string>
    <string name="no_appeal">未申诉</string>
    <string name="in_appeal">申诉中</string>
    <string name="appealed">已申诉</string>
    <string name="national_lottery">全国彩</string>
    <string name="local_lottery">地方彩</string>
    <string name="bicolor_sphere">双色球</string>
    <string name="lucky_color_3D">福彩3D</string>
    <string name="tuesday">周二</string>
    <string name="thursday">周四</string>
    <string name="sunday">周日</string>
</resources>