<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".ui.activity.RealNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:text="@string/account_open_phone_number"
            android:textColor="#94000000"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edittext_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_input_phone_number"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="#66000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:text="@string/account_open_name"
            android:textColor="#94000000"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_input_real_name"
            android:textColor="@color/black"
            android:textColorHint="#66000000"
            android:textSize="16dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#03000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:text="@string/id_number"
            android:textColor="#94000000"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edittext_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_input_id_number"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="#66000000"
            android:textSize="16dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_red_disable_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="15dp"
        android:minLines="3"
        android:text="【温馨提示】\n\n1.实名信息为彩虹多多平台核实身份的唯一凭证，请填写真实信息；\n2.我们不会将您的信息泄露或用作其他用途，请放心填写；\n3.如有任何问题，请联系在线客服。"
        android:textColor="#80000000"
        android:textSize="13dp" />

</androidx.appcompat.widget.LinearLayoutCompat>