<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".ui.activity.RealNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="1"
            android:maxWidth="220dp"
            android:minWidth="110dp"
            android:text="@string/password_set"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_set_hint"
            android:inputType="numberPassword"
            android:textSize="18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#03000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lines="1"
            android:maxWidth="220dp"
            android:minWidth="110dp"
            android:text="@string/password_confirm"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/edittext_password_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_confirm_hit"
            android:inputType="numberPassword"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/confirm_button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20dp" />

</androidx.appcompat.widget.LinearLayoutCompat>