<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background"
    android:orientation="vertical"
    tools:context=".ui.activity.AccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_lottery"
        android:textColor="#73000000"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_change"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="188****3582"
            android:textColor="#BF000000"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/lottery_bind_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/binding"
            android:textColor="#73000000"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/more_arrow" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_socity"
        android:textColor="#73000000"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_change"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/wechat"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wechat_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/socity_bind_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/unbinding"
            android:textColor="#73000000"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/more_arrow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_change"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/account_cancellation"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/account_cancellation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/go_cancellation"
            android:textColor="#73000000"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/more_arrow" />

    </LinearLayout>

</LinearLayout>