<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    tools:context=".ui.activity.WelfareTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/welfare_task_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/welfare_task_sing"
                android:textColor="#e83650"
                android:textSize="18dp"
                android:textStyle="italic|bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/welfare_task_background_sign"
                android:gravity="center"
                android:text="@string/welfare_task_sing_days"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:numColumns="7" />

        <Button
            android:id="@+id/sign_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_day_bg"
            android:minWidth="160dp"
            android:text="@string/sign_in_now"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>