<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background">

    <TextView
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/white_bg_with_corner"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/explain"
        android:textColor="#80000000" />

    <RelativeLayout
        android:id="@+id/simulate_layout"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_below="@id/explain"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/frame_simulate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/simulate_frame_1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/start_simulate"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_centerInParent="true"
            android:background="@drawable/start_simulate_icon"
            android:gravity="center"
            android:lines="2"
            android:scaleType="fitXY"
            android:text="@string/start_simulation"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/check_all_recommend"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_below="@id/simulate_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/white_bg_with_corner"
        android:gravity="center"
        android:text="@string/view_all_recommendations"
        android:textColor="#B3000000"
        android:textSize="14dp" />

</RelativeLayout>