<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_background"
    android:orientation="vertical"
    tools:context=".ui.activity.MessageSettingsActivity">

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_vertical|start"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/message_settings_tips"
        android:textColor="#73000000"
        android:textSize="12dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="27dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:text="@string/message_settings_all_message"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/all_message_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:background="#1A000000" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="27dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:lines="1"
            android:text="@string/message_settings_subscribe_message"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <RadioButton
            android:id="@+id/only_subscribe_message_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>